--- a/02_ゴール/目標ダッシュボード.md
+++ b/02_ゴール/目標ダッシュボード.md
@@ -3,34 +3,20 @@
 
 ```dataview
 TABLE
+  year as "年",
+  quarter as "四半期",
   area as "分野",
   level as "レベル",
-  link(file.name) as "目標",
+  file.link as "目標",
   status as "状態"
 FROM "02_ゴール"
-WHERE type = "goal" AND year >= 2025 AND year <= 2030
-GROUP BY year
-SORT year asc, area asc
+WHERE type = "goal"
+SORT year asc, quarter asc, area asc, file.name asc
+
 ```
 
 
-## 2. 分野ごとの年次ゴール
-
-```dataview
-TABLE
-  year as "年",
-  level as "レベル",
-  link(file.name) as "目標",
-  status as "状態"
-FROM "02_ゴール/03_年次"
-WHERE type = "goal" AND level = "年次"
-GROUP BY area
-SORT area asc, year asc
-```
-
-
-
-## 3. 投資一覧
+## 2. 投資一覧
 
 ```dataview
 TABLE
