戦略コンサル目標を更新

--- a/02_ゴール/03_年次/1年ゴール_2026_キャリア.md
+++ b/02_ゴール/03_年次/1年ゴール_2026_キャリア.md
@@ -42,7 +42,7 @@ Biz 領域:
 - [[1年ゴール_2026_キャリア_パラダイム輸入]]
 - [[1年ゴール_2026_キャリア_英語]]
 - [[1年ゴール_2026_キャリア_ファイナンス]]
-- [[1年ゴール_2026_キャリア_戦略コンサル]]
+- [[1年ゴール_2026_キャリア_戦略コンサル_kbd]]
 - [[1年ゴール_2026_キャリア_CTO機能]]
 
 ## 4. このゴールに紐づける投資・サブスク
