--- a/02_ゴール/03_年次/1年ゴール_2026_キャリア_戦略コンサル.md
+++ b/02_ゴール/03_年次/1年ゴール_2026_キャリア_戦略コンサル.md
@@ -1,19 +1,76 @@
 ---
 type: goal
-area: 趣味
+area: キャリア
 level: 年次
 year: 2026
 quarter:
 status: active
 parent: "[[1年ゴール_2026_キャリア]]"
 ---
-## この1年のテーマ
-- 自作キーボード分野の既存コミュニティを題材にして、
-  「どんな目的・ターゲット・運営戦略で成り立っているか」を整理する。
 
-## 具体的なゴール（スコープ）
-- 自作キーボード関連コミュニティ 3〜5件を選び、公開情報ベースで戦略を調査する。
-- 各コミュニティについて、目的・ターゲット・情報発信・運営のしくみ・お金と継続性を1ノートに整理する。
-- 最後に、比較レポート（共通点・違い・自分が取り入れたいポイント）を1本書く。
-- 新しいコミュニティを自分で立ち上げる／複雑なマネタイズを深掘りすることは、2026年の範囲外とする。
+## 1. この1年のテーマ
+セキュリティとAIの技術獲得活動を、「個人の頑張り」ではなく「組織としての意思決定」に変える。
+外部の事例調査と、社内での試行結果（仮説→検証）を、四半期ごとに更新するレポートにまとめる。
+年末には、来期の予算・工数・やる順番を説明できる状態にする。
 
+※このゴールは、[[1年ゴール_2026_キャリア_セキュリティ]] と [[1年ゴール_2026_キャリア_AI]] の成果を「まとめて意思決定につなぐ」ためのゴール。
+（新しい実験を増やすより、既に回している活動の“整理と説明”に寄せる。）
+
+## 2. 具体的なゴール（スコープ）
+- セキュリティ：テンプレ運用や適用記録から、「どこまでを標準化するか」「どこで深掘りするか」を決める材料を出す。
+- AI：仮説検証ログ（効果測定つき）から、「どの用途に投資するか」「どんなガードレールが必要か」を決める材料を出す。
+- これらを統合し、経営/部門/開発の意思決定に使える形で文章化する。
+
+## 3. 年末に残すもの（成果）
+1) 技術獲得 戦略レポート 2026（AI・セキュリティ統合）
+- 目次例：背景 / 今年の結論 / 重点仮説 / 検証結果（要点）/ 組織のルール案 / 来期提案（予算・工数・順番）
+
+2) 四半期アップデート（Q1〜Q4の合計4本、各1〜2ページ）
+- 変化点（外部） / 学び（内部） / 次の検証 / 意思決定が必要な点
+
+3) 根拠ログ（軽量でよい）
+- 外部事例メモ（出典リンクつき）
+- 社内の検証ログへのリンク集（AI/セキュリティ側の成果物にリンクする）
+
+## 4. 行動（ゼロにしないための最小ルール）
+- 月1回：60分だけ「外部の事例」と「社内の検証ログ」を更新する（深掘りはしない）
+- 四半期末：90分で四半期アップデートを1本書く
+- 年末：半日〜1日で統合レポートを仕上げる（四半期アップデートを材料にして短く仕上げる）
+
+## 5. 重点仮説（2026のテーマを絞る）
+### 仮説A：会話型のインターフェースは、将来の必須要求になる可能性が高い
+先に平易に言うと、ユーザーが「操作」より「会話」で使いたくなる流れが進む可能性がある。
+その中で、大規模言語モデル（Large Language Model）をどう活かすかを考える。
+また、機器そのものに載せなくても、外部の仕組みとつないで会話できる可能性がある。
+
+ここで、AIが外の道具やデータとやりとりするための決まり（Model Context Protocol）を調べる。
+この前提で、「社内のキャッチアップ戦略（何を・いつ・誰が・どれだけ）」をレポートに落とす。
+
+### 仮説B：AI活用が進むほど、セキュリティ運用の“最小の型”が効いてくる
+AI利用の拡大は便利だが、情報の扱い・品質・説明責任の事故を起こしやすい。
+セキュリティのテンプレ運用を前提に、AI活用のガードレールも文章化できるようにする。
+
+※仮説は年の途中で差し替えてよい。ただし同時に追うのは最大2つまで。
+
+## 6. できたらやること / やらないこと
+できたらやること：
+- 同業他社/近い業界の活用事例を四半期に1つだけ取り上げ、1枚で要点をまとめる（用途・事故防止・測り方）
+
+やらないこと（範囲外）：
+- 事例を大量に集めるだけの調査
+- 30ページ級の資料を作ること
+- “戦略レポートのための活動”を新規に増やしすぎること（柱の活動を優先する）
+
+## 7. 関連するゴール / プロジェクト（リンク）
+- [[1年ゴール_2026_キャリア_AI]]
+- [[1年ゴール_2026_キャリア_セキュリティ]]
+- [[1年ゴール_2026_キャリア_ファイナンス]]（財務観点は戦略レポートに統合する）
+- （必要に応じて）戦略レポート用のPJノートを切る：[[PJ_2026_技術獲得_戦略レポート運用]]
+
+## 8. 投資・サブスク
+- （必要に応じて追加）例：調査・学習サブスク、資料購入、セミナーなど
+- ただし契約は「レポートに反映できたか」で継続判断する
+
+## 9. 振り返りリンク
+- [[振り返り_2026Q1_キャリア]], [[振り返り_2026Q2_キャリア]], [[振り返り_2026Q3_キャリア]], [[振り返り_2026Q4_キャリア]]
+- [[振り返り_2026年_キャリア]]
